Заменяет 767px в медиа-выражениях на переменную

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -61,7 +61,7 @@
   }
 
   &--mobile-round {
-    @media (max-width: 767px) {
+    @media (max-width: @mobile-width-only) {
       padding: 12px 12px 8px;
       text-transform: uppercase;
       border-radius: 25px;
