--- a/source/less/blocks/descriptions.less
+++ b/source/less/blocks/descriptions.less
@@ -24,7 +24,7 @@
     background-color: @basic-blue-light;
   }
 
-  @media (max-width: 767px) {
+  @media (max-width: @mobile-width-only) {
     &::before {
       content: "";
       position: absolute;
