--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -235,7 +235,7 @@
 
 // Inner pages
 .menu--inner-page .menu__user-buttons {
-  @media (max-width: 767px) {
+  @media (max-width: @mobile-width-only) {
     display: none;
   }
 }
