--- a/source/less/blocks/select-country.less
+++ b/source/less/blocks/select-country.less
@@ -152,7 +152,7 @@
 }
 
 .select-country__controls--active .select-country__deselect {
-  @media (max-width: 767px) {
+  @media (max-width: @mobile-width-only) {
     display: none;
   }
 }
