--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -193,7 +193,7 @@
 }
 
 .form__button {
-  @media (max-width: 767px) {
+  @media (max-width: @mobile-width-only) {
     display: flex;
     justify-content: center;
     align-items: center;
