Добавляет переменную tablet-width-only

--- a/source/less/blocks/filter-catalog.less
+++ b/source/less/blocks/filter-catalog.less
@@ -38,7 +38,7 @@
     margin-bottom: 21px;
   }
 
-  @media (min-width: @tablet-width) and (max-width: 1439px) {
+  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     padding-left: 127px;
 
     &:not(:last-of-type) {
@@ -91,7 +91,7 @@
 .filter-catalog__legend-colon {
   display: none;
 
-  @media (min-width: @tablet-width) and (max-width: 1439px) {
+  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     display: inline;
   }
 }
@@ -103,7 +103,7 @@
   padding: 0;
   list-style: none;
 
-  @media (min-width: @tablet-width) and (max-width: 1439px) {
+  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     position: relative;
     top: -23px;
     display: grid;
@@ -121,7 +121,7 @@
 }
 
 .filter-catalog__fieldset:first-of-type .filter-catalog__options {
-  @media (min-width: @tablet-width) and (max-width: 1439px) {
+  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     top: -53px;
   }
 }
@@ -151,7 +151,7 @@
   margin-top: 19px;
   justify-content: flex-start;
 
-  @media (min-width: @tablet-width) and (max-width: 1439px) {
+  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     position: relative;
     top: -27px;
     margin-top: 0;
@@ -166,7 +166,7 @@
 .filter-catalog__level-filter {
   margin-top: 16px;
 
-  @media (min-width: @tablet-width) and (max-width: 1439px) {
+  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     position: relative;
     top: -29px;
     display: grid;
@@ -209,7 +209,7 @@
     background-color: @special-grey-border;
   }
 
-  @media (min-width: @tablet-width) and (max-width: 1439px) {
+  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     grid-area: numbers;
     grid-template-columns: 74px 74px;
     width: 148px;
@@ -264,7 +264,7 @@
 }
 
 .filter-catalog__level-range {
-  @media (min-width: @tablet-width) and (max-width: 1439px) {
+  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     grid-area: range;
   }
 }
