--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -37,6 +37,7 @@
 // Viewports
 @mobile-width-only: 767px;
 @tablet-width: 768px;
+@tablet-width-only: 1439px;
 @desktop-width: 1440px;
 
 // Z-index
