--- a/source/less/style.less
+++ b/source/less/style.less
@@ -75,6 +75,9 @@
 @import "blocks/traveler-info.less";
 @import "blocks/pagination.less";
 
+// Blocks -- lost
+@import "blocks/lost.less";
+
 // Blocks -- footer
 @import "blocks/page-footer.less";
 @import "blocks/copyright.less";
