Прижимает футер к низу при любом количестве контента

--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -1,4 +1,8 @@
 .page-body {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  min-height: 100vh;
   margin: 0;
   font-family: "Blogger Sans", "Tahoma", sans-serif;
   font-style: normal;
@@ -23,4 +27,8 @@
       line-height: 24px;
     }
   }
+}
+
+.page-body__footer {
+  margin-top: auto;
 }
