Задаёт повторяющиеся значения grid-template-columns через repeat()

--- a/source/less/blocks/plans-list.less
+++ b/source/less/blocks/plans-list.less
@@ -22,7 +22,7 @@
     display: grid;
     grid-template-areas: "title title title"
       "companions dates edit";
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     padding: 0;
   }
 
