--- a/source/less/blocks/user-buttons.less
+++ b/source/less/blocks/user-buttons.less
@@ -1,6 +1,6 @@
 .user-buttons {
   display: grid;
-  grid-template-columns: min-content min-content min-content;
+  grid-template-columns: repeat(3, min-content);
   align-items: start;
 }
 
