--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -16,7 +16,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     padding: 0 60px;
   }
 }
