--- a/source/less/blocks/filter-country.less
+++ b/source/less/blocks/filter-country.less
@@ -198,7 +198,7 @@
 
 .filter-country__first-letters {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr);
   margin-bottom: 15px;
 
   @media (min-width: @tablet-width) {
