Исправляет z-index у табов фильтра по странам

--- a/source/less/blocks/filter-country.less
+++ b/source/less/blocks/filter-country.less
@@ -75,6 +75,10 @@
   background-color: @special-bluegrey;
   list-style: none;
 
+  @media (max-width: @mobile-width-only) {
+    z-index: @z-index-filter-country-tabs;
+  }
+
   @media (min-width: @tablet-width) {
     order: 1;
     position: static;
