--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -58,3 +58,4 @@
 @z-index-page-main-title-container: 2;
 @z-index-filter-country-menu: -1;
 @z-index-user-profile: 3;
+@z-index-filter-country-tabs: -1;
