Makes everything fit Pixel Perfect and adds background images

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -1,5 +1,6 @@
 .about {
   background-image: url("../../img/backgrounds/about-mobile.png");
+  background-position: 70% 0;
   background-repeat: no-repeat;
   background-color: @basic-blue-other;
 
@@ -9,7 +10,7 @@
 }
 
 .about__wrapper {
-  padding: 33px 50px 82px;
+  padding: 33px 50px 81px;
 
   @media (min-width: @tablet-width) {
     padding: 41px 385px 89px 74px;
