--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -1,5 +1,5 @@
 .address {
-  padding: 62px 0 0;
+  padding: 56px 0 0;
 
   @media (min-width: @tablet-width) {
     padding-top: 124px;
@@ -37,9 +37,13 @@
 
 .address__address {
   margin: 0 0 32px;
+  padding: 2px 0 0 62px;
   font-weight: 700;
   text-transform: uppercase;
   color: @basic-blue-light;
+  background-image: url("../../img/backgrounds/map_mark.svg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 62px;
