--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -1,5 +1,6 @@
 .rates__wrapper {
-  padding-top: 53px;
+  padding-top: 37px;
+  padding-bottom: 38px;
 
   @media (min-width: @tablet-width) {
     padding-top: 74px;
@@ -13,7 +14,11 @@
 }
 
 .rates__title {
-  margin-bottom: 56px;
+  margin-bottom: 25px;
+  padding: 16px 110px 15px 25px;
+  background-image: url("../../img/backgrounds/rates.png");
+  background-position: 100% 0;
+  background-repeat: no-repeat;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 32px;
@@ -26,7 +31,8 @@
 }
 
 .rates__table {
-  margin-bottom: 31px;
+  margin-bottom: 28px;
+  padding-left: 21px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
