--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -30,6 +30,16 @@
   }
 }
 
+.socials--menu svg {
+  height: 20px;
+  width: 24px;
+}
+
+.socials--footer svg {
+  height: 18px;
+  width: 24px;
+}
+
 .socials__link:hover .socials__icon {
   opacity: 0.6;
 }
