--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,4 +1,5 @@
 .button {
+  position: relative;
   box-sizing: border-box;
   padding: 12px 40px 8px;
   font-family: "Blogger Sans", "Tahoma", sans-serif;
@@ -45,6 +46,20 @@
       width: 275px;
       min-height: 80px;
     }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      right: 23px;
+      display: block;
+      width: 0;
+      height: 0;
+      border-top: 6px solid transparent;
+      border-bottom: 6px solid transparent;
+      border-left: 10px solid @special-blue-dark;
+      transform: translateY(-50%);
+    }
   }
 
   &--short {
@@ -69,7 +84,12 @@
   }
 
   &--outline {
+    padding: 19px;
     border: 3px solid @basic-blue-other;
+
+    &::after {
+      right: 21px;
+    }
   }
 
   &--blue {
@@ -142,7 +162,21 @@
   }
 
   &--feedback-form {
-    border-radius: 0 20px 20px 0;
+    border-radius: 11px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      right: 23px;
+      display: block;
+      width: 0;
+      height: 0;
+      border-top: 6px solid transparent;
+      border-bottom: 6px solid transparent;
+      border-left: 10px solid @special-blue-dark;
+      transform: translateY(-50%);
+    }
 
     @media (min-width: @tablet-width) {
       padding: 30px 36px 27px;
