--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -1,10 +1,14 @@
 .companions {
   background-image: url("../../img/backgrounds/companions-mobile.png");
+  background-position: 0 59px;
   background-repeat: no-repeat;
   background-color: @basic-blue-other;
 }
 
 .companions__wrapper {
+  padding-top: 93px;
+  padding-bottom: 29px;
+
   @media (min-width: @tablet-width) {
     padding: 208px 74px 87px;
   }
@@ -24,6 +28,7 @@
 
 .companions__title {
   margin-bottom: 19px;
+  padding-left: 24px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 55px;
@@ -35,7 +40,8 @@
 }
 
 .companions__text {
-  margin: 0 0 25px;
+  margin: 0 0 21px;
+  padding: 0 25px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 39px;
@@ -71,7 +77,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  margin: 0 auto 20px;
+  margin: 0 auto 11px;
   padding: 0;
   list-style: none;
 
