--- a/source/less/blocks/countries.less
+++ b/source/less/blocks/countries.less
@@ -18,6 +18,7 @@
 
 .countries__title {
   margin: 0 0 19px;
+  padding-left: 25px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 57px;
@@ -33,6 +34,8 @@
 
 .countries__text {
   margin: 0 0 60px;
+  padding-right: 45px;
+  padding-left: 25px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 104px;
@@ -48,7 +51,7 @@
 }
 
 .countries__list {
-  margin: 0 0 27px;
+  margin: 0 0 25px;
   padding: 0;
   list-style: none;
 
