--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -1,5 +1,5 @@
 .feedback {
-  padding: 97px 25px 29px;
+  padding: 97px 25px 28px;
 
   @media (min-width: @tablet-width) {
     padding: 133px 36px 60px;
@@ -24,8 +24,8 @@
 }
 
 .feedback__text {
-  margin: 0 0 17px;
-  padding: 0 35px;
+  margin: 0 0 28px;
+  padding: 0 25px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
@@ -37,14 +37,22 @@
   }
 
   &:nth-of-type(2) {
+    margin-bottom: 18px;
+
     @media (min-width: @desktop-width) {
       margin-bottom: 43px;
     }
   }
 }
 
+.feedback__text-break {
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
 .feedback__form {
-  margin-bottom: 29px;
+  margin-bottom: 28px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 60px;
