--- a/source/less/blocks/table.less
+++ b/source/less/blocks/table.less
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  padding: 13px 0 18px;
+  padding: 9px 0 8px;
   border-top: 1px solid fade(@black, 5%);
 
   @media (min-width: @tablet-width) {
@@ -44,8 +44,8 @@
     &::after {
       content: counter(listCounter);
       position: absolute;
-      top: 0;
-      right: -40px;
+      top: 3px;
+      right: -46px;
       display: flex;
       justify-content: center;
       align-items: center;
