Adds colors and z-index for decorative rectange

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -16,6 +16,7 @@
 @special-blue: #132576;
 @special-blue-light: #DFE3F0;
 @special-blue-dark: #101D41;
+@special-blue-darkest: #141B3B;
 @special-steelblue: #D1D7E9;
 @special-steelblue-dark: #D4D9EB;
 @special-darkblue: #D6DAED;
@@ -28,11 +29,13 @@
 @special-grey-border-dark: #E1E3E9;
 @special-bluegrey: #E2E5F2;
 @special-red: #F47E7E;
+@special-red-darker: #F97676;
 @special-red-saturated: #FF5C23;
 @special-orange: #FF8D30;
 @special-orange-light: #FFA530;
 @special-orange-dark: #F26926;
 @special-pink: #F9EAEA;
+@special-green: #81E31E;
 
 // Viewports
 @mobile-width-only: 767px;
@@ -60,3 +63,4 @@
 @z-index-user-profile: 3;
 @z-index-filter-country-tabs: -1;
 @z-index-tooltip: 3;
+@z-index-about-rectangle: -1;
