--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -49,7 +49,7 @@
     margin-right: 22px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     width: 90px;
     height: 90px;
     margin-right: 31px;
@@ -69,6 +69,7 @@
 }
 
 .contacts__text {
+  padding-top: 7px;
   font-weight: 700;
   line-height: 18px;
   text-transform: uppercase;
