--- a/source/less/blocks/countries.less
+++ b/source/less/blocks/countries.less
@@ -1,7 +1,16 @@
+.countries {
+  position: relative;
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../../img/backgrounds/tablet_flags-back.png");
+    background-position: 92% 80px;
+    background-repeat: no-repeat;
+  }
+}
+
 .countries__wrapper {
   @media (min-width: @tablet-width) {
-    padding-right: 75px;
-    padding-left: 75px;
+    padding: 73px 75px 81px 73px;
   }
 
   @media (min-width: @desktop-width) {
@@ -23,6 +32,7 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 57px;
     padding-right: 310px;
+    padding-left: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -40,6 +50,7 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 104px;
     padding-right: 279px;
+    padding-left: 0;
     font-size: 28px;
     line-height: 33px;
   }
@@ -51,12 +62,25 @@
 }
 
 .countries__list {
+  position: relative;
   margin: 0 0 25px;
   padding: 0;
   list-style: none;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 46px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: -38px;
+      left: -33px;
+      display: block;
+      width: 141px;
+      height: 141px;
+      background-color: @special-bluegrey;
+      border-radius: 20px;
+    }
   }
 
   @media (min-width: @desktop-width) {
