--- a/source/less/blocks/level-badge.less
+++ b/source/less/blocks/level-badge.less
@@ -21,6 +21,10 @@
   .fontsize(24px);
   color: @basic-blue-light;
 
+  @media (min-width: @tablet-width) {
+    top: 10px;
+  }
+
   &--big {
     .fontsize(38px);
   }
@@ -38,6 +42,10 @@
   .fontsize(14px);
   color: @special-grey;
   border-top: 1px solid @white;
+
+  @media (min-width: @tablet-width) {
+    top: -6px;
+  }
 
   &--big {
     .fontsize(18px);
