--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -4,7 +4,7 @@
   background-color: @basic-blue-other-dark;
 
   @media (min-width: @tablet-width) {
-    padding: 0 72px;
+    padding: 0 360px 0 73px;
     background-color: transparent;
   }
 
@@ -19,7 +19,6 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 45px;
-    padding-right: 360px;
   }
 
   @media (min-width: @desktop-width) {
@@ -34,7 +33,6 @@
   font-weight: 700;
 
   @media (min-width: @tablet-width) {
-    padding-right: 404px;
     font-size: 21px;
     line-height: 25px;
   }
