--- a/source/less/blocks/table.less
+++ b/source/less/blocks/table.less
@@ -3,7 +3,7 @@
   padding-right: 45px;
 
   @media (min-width: @tablet-width) {
-    padding: 41px 35px 45px 92px;
+    padding: 38px 32px 39px 92px;
     .fontsize(28px);
   }
 
@@ -26,7 +26,7 @@
   @media (min-width: @tablet-width) {
     flex-direction: row;
     justify-content: space-between;
-    padding: 20px 0 18px;
+    padding: 18px 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -54,6 +54,8 @@
       color: @white;
 
       @media (min-width: @tablet-width) {
+        top: -2px;
+        left: -89px;
         .circle(68px);
         .fontsize(28px);
         right: unset;
