--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -36,17 +36,6 @@
     text-transform: none;
     border-radius: 10px;
 
-    @media (min-width: @tablet-width) {
-      padding: 29px 74px 27px 33px;
-      .fontsize(24px);
-      border-radius: 20px;
-    }
-
-    @media (min-width: @desktop-width) {
-      width: 275px;
-      min-height: 80px;
-    }
-
     &::after {
       content: "";
       position: absolute;
@@ -59,6 +48,21 @@
       border-bottom: 6px solid transparent;
       border-left: 10px solid @special-blue-dark;
       transform: translateY(-50%);
+    }
+
+    @media (min-width: @tablet-width) {
+      padding: 29px 74px 27px 33px;
+      .fontsize(24px);
+      border-radius: 20px;
+
+      &::after {
+        right: 36px;
+      }
+    }
+
+    @media (min-width: @desktop-width) {
+      width: 275px;
+      min-height: 80px;
     }
   }
 
@@ -89,6 +93,14 @@
 
     &::after {
       right: 21px;
+    }
+
+    @media (min-width: @tablet-width) {
+      padding: 25px 34px;
+
+      &::after {
+        right: 34px;
+      }
     }
   }
 
@@ -181,6 +193,12 @@
     @media (min-width: @tablet-width) {
       padding: 30px 36px 27px;
       text-align: left;
+      border-radius: 0 20px 20px 0;
+
+      &::after {
+        right: 34px;
+        border-left-width: 11px;
+      }
     }
   }
 
