--- a/source/less/blocks/country-card.less
+++ b/source/less/blocks/country-card.less
@@ -20,7 +20,7 @@
   @media (min-width: @tablet-width) {
     position: absolute;
     top: 0;
-    right: 0;
+    right: -2px;
     z-index: 1;
     order: 2;
     border-radius: 0 20px 20px 0;
@@ -40,13 +40,16 @@
 
   @media (min-width: @tablet-width) {
     order: 1;
+    grid-template-areas: "name" "slogan" "count";
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content min-content min-content;
     .move-up(0);
     z-index: 2;
     box-sizing: border-box;
-    width: 433px;
+    width: 432px;
     min-height: 140px;
     margin-top: 0;
-    padding: 30px 29px 22px;
+    padding: 30px 50px 21px 30px;
     border-radius: 20px 0 0 20px;
   }
 }
@@ -60,6 +63,8 @@
   color: @black;
 
   @media (min-width: @tablet-width) {
+    margin-bottom: 5px;
+    padding: 0;
     .fontsize(24px);
   }
 
@@ -75,7 +80,7 @@
 
     @media (min-width: @tablet-width) {
       top: 17px;
-      right: -35px;
+      right: -36px;
       left: unset;
       width: 70px;
       height: 47px;
@@ -92,11 +97,19 @@
   color: fade(@special-grey, 30%);
 
   @media (min-width: @tablet-width) {
+    margin-bottom: 20px;
+    padding: 0;
     .fontsize(20px);
   }
 
   &--two-lines {
     padding-bottom: 5px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 0;
+      padding-right: 220px;
+      padding-bottom: 0;
+    }
   }
 }
 
@@ -113,6 +126,7 @@
     right: unset;
     bottom: 26px;
     left: 30px;
+    padding: 0;
     padding-left: 29px;
     .fontsize(20px);
   }
