--- a/source/less/blocks/feedback-form.less
+++ b/source/less/blocks/feedback-form.less
@@ -6,6 +6,7 @@
 
   @media (min-width: @tablet-width) {
     grid-template-columns: 1fr 80px;
+    border-radius: 20px;
   }
 
   @media (min-width: @desktop-width) {
@@ -27,7 +28,7 @@
   border-radius: 20px 0 0 20px;
 
   @media (min-width: @tablet-width) {
-    padding: 28px 36px;
+    padding: 28px 36px 26px;
     .fontsize(24px);
   }
 
