--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -2,7 +2,8 @@
   padding: 97px 25px 28px;
 
   @media (min-width: @tablet-width) {
-    padding: 133px 36px 60px;
+    .move-up(-55px);
+    padding: 131px 36px 60px;
   }
 
   @media (min-width: @desktop-width) {
@@ -29,7 +30,7 @@
   text-align: center;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 65px;
+    margin-bottom: 63px;
   }
 
   @media (min-width: @desktop-width) {
@@ -38,6 +39,10 @@
 
   &:nth-of-type(2) {
     margin-bottom: 18px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 37px;
+    }
 
     @media (min-width: @desktop-width) {
       margin-bottom: 43px;
@@ -55,7 +60,7 @@
   margin-bottom: 28px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 60px;
+    margin: 0 40px 60px;
   }
 
   @media (min-width: @desktop-width) {
@@ -82,6 +87,7 @@
   margin-bottom: 0;
 
   @media (min-width: @tablet-width) {
+    padding-left: 40px;
     .fontsize(28px);
   }
 }
