--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -5,7 +5,7 @@
   border-radius: 25px 25px 0 0;
 
   @media (min-width: @tablet-width) {
-    border-radius: 40px 40px 0 0;
+    border-radius: 56px 56px 0 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -56,5 +56,6 @@
 
   @media (min-width: @tablet-width) {
     margin: 0;
+    margin-right: 10px;
   }
 }
