--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -4,7 +4,7 @@
 
   @media (min-width: @tablet-width) {
     padding-top: 74px;
-    padding-bottom: 63px;
+    padding-bottom: 61px;
   }
 
   @media (min-width: @desktop-width) {
@@ -22,7 +22,9 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 32px;
+    padding: 0;
     text-align: center;
+    background-image: none;
   }
 
   @media (min-width: @desktop-width) {
@@ -31,11 +33,25 @@
 }
 
 .rates__table {
+  position: relative;
   margin-bottom: 28px;
   padding-left: 21px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 0;
+    margin-bottom: -10px;
+    padding-left: 87px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      display: block;
+      width: 198px;
+      height: 100%;
+      background-color: @special-bluegrey;
+      border-radius: 20px;
+    }
   }
 }
 
@@ -47,14 +63,29 @@
   .fontsize(16px);
   text-align: center;
   color: @special-blue;
-
   .interactions(@special-blue);
 
   @media (min-width: @tablet-width) {
+    position: relative;
     justify-content: flex-start;
     align-items: center;
+    box-sizing: border-box;
+    padding-right: 160px;
     .fontsize(20px);
     text-align: left;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -16px;
+      right: 45px;
+      display: block;
+      width: 100px;
+      height: 100px;
+      background-image: url("../../img/backgrounds/rates.png");
+      background-position: 0 0;
+      background-repeat: no-repeat;
+    }
   }
 
   @media (min-width: @desktop-width) {
