--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -102,6 +102,10 @@
         right: 34px;
       }
     }
+
+    @media (min-width: @desktop-width) {
+      padding: 26px 34px 12px;
+    }
   }
 
   &--blue {
