--- a/source/less/blocks/companion-card.less
+++ b/source/less/blocks/companion-card.less
@@ -110,6 +110,10 @@
   @media (min-width: @tablet-width) {
     top: -43px;
   }
+
+  @media (min-width: @desktop-width) {
+    top: -41px;
+  }
 }
 
 .companion-card__transport-list {
@@ -127,5 +131,9 @@
   @media (min-width: @tablet-width) {
     top: 80px;
     left: 22px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 82px;
   }
 }
