--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -24,6 +24,7 @@
     display: grid;
     grid-template-columns: 1fr min-content;
     padding: 0;
+    padding-left: 215px;
     background-color: transparent;
   }
 
@@ -113,8 +114,8 @@
     display: block;
     order: unset;
     margin-bottom: 0;
-    padding-left: 242px;
-    padding-right: 20px;
+    padding-right: 25px;
+    padding-left: 25px;
   }
 }
 
@@ -200,6 +201,7 @@
   @media (min-width: @desktop-width) {
     position: relative;
     top: 0;
+    right: 0;
     display: grid;
   }
 }
@@ -225,6 +227,7 @@
     position: relative;
     .move-up(-53px);
     padding: 0;
+    padding-left: 215px;
   }
 }
 
@@ -236,7 +239,7 @@
   display: block;
 
   @media (min-width: @tablet-width) {
-    padding: 0 56px;
+    padding: 0 25px;
   }
 }
 
