--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -20,7 +20,7 @@
     }
 
     @media (min-width: @desktop-width) {
-      margin-top: -228px;
+      margin-top: -66px;
     }
   }
 }
@@ -39,7 +39,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 47px 58px 43px;
+    padding: 47px 60px 43px;
   }
 }
 
@@ -57,5 +57,9 @@
   @media (min-width: @tablet-width) {
     margin: 0;
     margin-right: 10px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 11px;
   }
 }
