--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -3,7 +3,7 @@
   .move-up(-73px);
 
   @media (min-width: @desktop-width) {
-    .move-up(-130px);
+    .move-up(0);
   }
 
   &--no-js {
@@ -11,7 +11,7 @@
     margin-top: 0;
 
     @media (min-width: @desktop-width) {
-      .move-up(-130px);
+      .move-up(-101px);
     }
   }
 
