--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -48,7 +48,8 @@
 
   @media (min-width: @desktop-width) {
     width: 418px;
-    padding: 0 0 0 69px;
+    padding: 0;
+    padding-left: 127px;
     text-align: left;
   }
 }
@@ -60,8 +61,8 @@
 
   @media (min-width: @desktop-width) {
     width: 288px;
-    margin-bottom: 116px;
-    padding-top: 12px;
+    margin-bottom: 118px;
+    padding: 12px 58px 0 0;
   }
 }
 
