--- a/source/less/blocks/countries.less
+++ b/source/less/blocks/countries.less
@@ -6,6 +6,10 @@
     background-position: 92% 80px;
     background-repeat: no-repeat;
   }
+
+  @media (min-width: @desktop-width) {
+    background-position: 1092px 88px;
+  }
 }
 
 .countries__wrapper {
@@ -39,6 +43,7 @@
     grid-area: left-top;
     margin-bottom: 58px;
     padding-top: 6px;
+    padding-left: 113px;
   }
 }
 
@@ -57,7 +62,9 @@
 
   @media (min-width: @desktop-width) {
     grid-area: left-middle;
-    margin-bottom: 98px;
+    margin-bottom: 97px;
+    padding-right: 239px;
+    padding-left: 113px;
   }
 }
 
@@ -86,6 +93,12 @@
   @media (min-width: @desktop-width) {
     grid-area: right;
     margin-bottom: 0;
+
+    &::before {
+      top: -71px;
+      left: 0;
+      width: 140px;
+    }
   }
 }
 
@@ -98,6 +111,7 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 10px;
+    padding-left: 70px;
   }
 }
 
@@ -105,5 +119,6 @@
   @media (min-width: @desktop-width) {
     grid-area: left-bottom;
     align-self: end;
+    margin-left: 115px;
   }
 }
