--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -7,7 +7,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 208px 75px 103px;
+    padding: 164px 75px 104px;
   }
 }
 
@@ -35,6 +35,7 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 60px;
+    line-height: 31px;
   }
 
   &:nth-of-type(2) {
@@ -45,7 +46,7 @@
     }
 
     @media (min-width: @desktop-width) {
-      margin-bottom: 43px;
+      margin-bottom: 41px;
     }
   }
 }
@@ -89,5 +90,9 @@
   @media (min-width: @tablet-width) {
     padding-left: 40px;
     .fontsize(28px);
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 0;
   }
 }
