--- a/source/less/blocks/top-bar.less
+++ b/source/less/blocks/top-bar.less
@@ -9,10 +9,12 @@
   }
 
   @media (min-width: @desktop-width) {
+    position: fixed;
+    z-index: @z-index-top-bar;
     width: 1440px;
     margin-right: auto;
     margin-left: auto;
-    padding: 46px 58px 0;
+    padding: 49px 60px 0;
     background-color: transparent;
   }
 
@@ -20,6 +22,8 @@
     background-color: @white;
 
     @media (min-width: @desktop-width) {
+      position: static;
+      padding: 60px 60px 0;
       background-color: transparent;
     }
   }
@@ -35,8 +39,14 @@
     top: 45px;
     left: 40px;
   }
+
+  @media (min-width: @desktop-width) {
+    top: 47px;
+    left: 60px;
+  }
 }
 
+// No JS
 .top-bar--no-js .top-bar__logo {
   position: relative;
   top: 0;
