Adds shadow color variable

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -36,6 +36,7 @@
 @special-orange-dark: #F26926;
 @special-pink: #F9EAEA;
 @special-green: #81E31E;
+@special-shadow: rgba(29, 46, 91, 0.14);
 
 // Viewports
 @mobile-width-only: 767px;
