--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -9,6 +9,7 @@
   padding: 34px 0 0;
   background-color: @white;
   border-radius: 20px;
+  box-shadow: 0 2px 8px @special-shadow;
   transform: translate(-50%, -50%);
 
   @media (min-width: @tablet-width) {
@@ -18,6 +19,7 @@
 
   @media (min-width: @desktop-width) {
     min-width: 750px;
+    border-radius: 30px;
   }
 
   &--show {
@@ -26,19 +28,19 @@
 }
 
 .modal__title {
-  margin: 0 0 28px;
+  margin: 0 0 25px;
   padding: 0 25px;
   font-weight: 700;
   .fontsize(24px);
   text-align: center;
 
   @media (min-width: @tablet-width) {
+    margin-bottom: 44px;
     .fontsize(45px);
-    margin-bottom: 47px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 46px;
+    margin-bottom: 44px;
   }
 
   &--orange {
@@ -48,31 +50,23 @@
 
 .modal__table {
   margin-bottom: 34px;
-  padding: 0 25px;
+  padding: 0 24px 0 23px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 52px;
-    padding: 0 90px;
+    padding: 0 90px 0 88px;
     font-size: 22px;
   }
 
   @media (min-width: @desktop-width) {
     margin-bottom: 53px;
-    padding: 0 60px;
-  }
-}
-
-.modal__table .table__row {
-  padding: 14px 0;
-
-  @media (min-width: @desktop-width) {
-    padding: 12px 0 15px;
+    padding: 0 58px 0 55px;
   }
 }
 
 .modal__button-close {
   width: 100%;
-  padding: 21px;
+  padding: 21px 21px 15px;
   font-family: "Blogger Sans", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -97,10 +91,12 @@
   @media (min-width: @tablet-width) {
     padding: 41px;
     .fontsize(24px);
+    text-transform: none;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 41px 41px 45px;
+    padding: 41px 41px 40px;
     line-height: 26px;
+    border-radius: 0 0 30px 30px;
   }
 }
